web/webapi/simple-k8s-hosting/SimpleK8sHosting/k8s-docker-desktop-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: weather-forecast
spec:
  replicas: 1
  selector:
    matchLabels:
      service: webapi
  template:
    metadata:
      labels:
        app: weather-forecast
        service: webapi
    spec:
      containers:
        - name: webapicontainer
          image: joymon/simplek8shosting:0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webapiservice
  labels:
    app: weather-forecast
    service: webapi
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort : 80
      protocol: TCP
  selector:
    service: webapi
