web/webapi/simple-k8s-hosting/SimpleK8sHosting/k8s-docker-desktop-ingress-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: simplek8shosting-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  namespace: simplek8shosting-ingress
  labels:
    app: weather-forecast
spec:
  replicas: 1
  selector:
    matchLabels:
      service: webapi
  template:
    metadata:
      namespace: simplek8shosting-ingress
      labels:
        app: weather-forecast
        service: webapi
    spec:
      containers:
        - name: webapicontainer
          image: joymon/simplek8shosting:0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webapiservice
  namespace: simplek8shosting-ingress
  labels:
    app: weather-forecast
    service: webapi
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort : 80
      protocol: TCP
  selector:
    service: webapi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapiingress
  namespace: simplek8shosting-ingress
spec:
  rules:
  - host: simplek8shostingviahostfile.io # Modify the local machine's' hosts file with a line 127.0.0.1 simplek8shostingviahostfile.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapiservice
            port:
              number: 8080
